--- a/src/Components/List/List.css
+++ b/src/Components/List/List.css
@@ -3,6 +3,7 @@
   border-radius: 12px;
   border: 1px solid black;
   margin: auto;
+  margin-bottom: 1.5em;
 }
 
 .list-h2 {
@@ -10,9 +11,24 @@
   display: inline-block;
 }
 
+.underline {
+  border: 0;
+  height: 2px;
+  border-top: 1px solid rgb(70, 220, 70);
+  margin-top: 0;
+  margin-bottom: 1em;
+}
+
+.color {
+  background-color: rgb(70, 220, 70);
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
 /* DROPDOWN MENU STYLING */
 .dropdown {
   height: 20px;
+  /* Relative position makes it so that the dropdown menu starts at the edge of the button */
   position: relative;
   text-align: right;
   margin-right: 1em;
@@ -33,7 +49,7 @@
 
 #dropdown-menu {
   border: 1px solid black;
-  border-radius: 2px;
+  border-radius: 5px;
   box-shadow: 0 0 4px grey;
   position: absolute;
   right: 0px;
@@ -52,10 +68,22 @@
   background-color: rgb(50, 50, 255);
 }
 
+#dropdown-edit {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#dropdown-reset {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 #delete-button, #edit-button, #reset-button {
+  width: 100%;
   border: none;
   background-color: transparent;
   font-size: 14px;
+  text-align: right;
 }
 
 #delete-button:focus, #edit-button:focus, #reset-button:focus {
