--- a/src/Components/ItemQuantity/ItemQuantity.css
+++ b/src/Components/ItemQuantity/ItemQuantity.css
@@ -3,6 +3,27 @@
 }
 
 .quantity-input {
+  border: 1px solid rgb(104, 104, 104);
+  border-radius: 3px;
   width: 25px;
   text-align: center;
+}
+
+.decrement-button, .increment-button {
+  border: 1px solid rgb(104, 104, 104);
+  border-radius: 3px;
+  width: 23px;
+  cursor: pointer;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
