Styled delete list modal

--- a/src/Components/GeneralEditForm/GeneralEditForm.css
+++ b/src/Components/GeneralEditForm/GeneralEditForm.css
@@ -23,5 +23,8 @@
 }
 
 #submit-list-edit {
+  border: 1px solid rgb(0, 192, 2);
+  background-color: rgb(0, 192, 0);
+  color: white;
   margin-right: 0.5em;
 }
