--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -9,6 +9,7 @@
   border-top-left-radius: 100px;
   border-bottom-left-radius: 100px;
   border: 1px solid black;
+  border-right: none;
   padding: 0;
 }
 
