--- a/src/Components/List/List.css
+++ b/src/Components/List/List.css
@@ -16,7 +16,7 @@
   height: 2px;
   border-top: 1.15px solid rgb(90, 90, 90);
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0.5em;
 }
 
 .color {
@@ -47,7 +47,7 @@
 }
 
 #event-date {
-  margin: 0.5em 0 0.3em 0;
+  margin: 0 0 0.3em 0;
   font-size: 24px;
 }
 
