--- a/src/Components/EventCheckList/EventCheckList.css
+++ b/src/Components/EventCheckList/EventCheckList.css
@@ -1,3 +1,7 @@
+.event-lists {
+  margin-top: 70px;
+}
+
 .direct-general, .direct-event {
   border: 1px solid rgb(163, 70, 163);;
   padding: 8px 10px 8px 10px;
