--- a/src/Components/List/List.css
+++ b/src/Components/List/List.css
@@ -52,7 +52,7 @@
 }
 
 /* DROPDOWN MENU STYLING */
-.dropdown {
+.dropdown-list {
   height: 20px;
   /* Relative position makes it so that the dropdown menu starts at the edge of the button */
   position: relative;
@@ -60,7 +60,7 @@
   margin-right: 1em;
 }
 
-.dropbtn {
+.dropbtn-list {
   width: 30px;
   padding: 0;
   background-color: transparent;
@@ -69,11 +69,11 @@
   cursor: pointer;
 }
 
-.dropbtn:focus {
+.dropbtn-list:focus {
   outline: none;
 }
 
-#dropdown-menu {
+#dropdown-menu-list {
   border: 1px solid black;
   border-radius: 5px;
   box-shadow: 0 0 4px grey;
@@ -82,7 +82,7 @@
   z-index: 1;
 }
 
-.dropdown-btn {
+.dropdown-btn-list {
   width: 93px;
   display: block;
   color: black;
@@ -90,7 +90,7 @@
   padding: 3px 0 3px 0;
 }
 
-.dropdown-btn:hover {
+.dropdown-btn-list:hover {
   background-color: rgb(50, 50, 255);
 }
 
