Added functionality so navbar menu closes when clicking outside of the "div". This was achieved by creating a ref to reference our parent node (hamburger). Then, we added event listeners to the document in lifecycle methods

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -60,7 +60,8 @@
   color: white;
   height: 70px;
   line-height: 70px;
-  width: 160px;
+  width: 19px;
+  margin-right: 1em;
 }
 
 .hamburger-logo {
