--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -133,6 +133,7 @@
 .hamburger-logo:hover {
   color: rgb(129, 22, 129);
 }
+
 /* END HAMBURGER MENU STYLING */
 
 @media only screen and (min-width: 750px) {
@@ -146,6 +147,14 @@
     display: none;
   }
 
+  #home-menu {
+    margin-right: 0;
+  }
+  
+  #logout-menu {
+    padding-left: 0;
+  }
+
   /* DROPDOWN MENU STYLING */
   #dropdown-li {
     display: inline-block;
@@ -154,7 +163,7 @@
   }
 
   .dropbtn {
-    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+    background-color: transparent;
     color: white;
     padding: 0px 10px;
     margin-bottom: 0px;
@@ -167,41 +176,57 @@
   .dropdown {
     position: relative;
     display: inline-block;
+    padding-left: 17px;
+    padding-right: 17px;
+    width: 71%;
   }
 
   .dropdown-content {
     display: none;
     position: absolute;
-    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
-    min-width: 160px;
+    right: 1px;
+    border: 1px solid rgb(129, 22, 129);;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: white;
+    min-width: 90px;
     z-index: 1;
   }
 
   .dropdown-link {
-    color: white;
-    padding: 12px 16px;
+    color: rgb(129, 22, 129);
+    width: 92px;
+    height: 71.4px;
     text-decoration: none;
     display: block;
+    transition: all 0.3s ease 0s;
   }
 
   .dropdown-link:hover {
-    color: rgb(129, 22, 129);
+    color: white;
+    background-color: rgb(129, 22, 129);
   }
 
   .selected {
     color: rgb(129, 22, 129);
-  }  
+  }
+
+  .selected-dropdown {
+    color: white;
+    background-color: rgb(129, 22, 129);
+  }
 
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
 
   .dropdown:hover .dropbtn {
     color: rgb(129, 22, 129);
   }
 
   .dropdown-span {
-    font-size: 13px;
+    font-size: 14px;
   }
   /* END DROPDOWN MENU STYLING */
 
