Register styling complete

--- a/src/Components/FormValidation/FormValidation.css
+++ b/src/Components/FormValidation/FormValidation.css
@@ -1,6 +1,6 @@
 .error-message {
   color: orangered;
   font-weight: bold;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 1em;
+  font-size: 13px;
 }
