--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -1,6 +1,20 @@
+.top-div {
+  margin-top: 150px;
+}
+
 .register-section {
+  width: 320px;
+  margin: auto;
+  border: 0.5px solid rgb(107, 107, 107);
+  border-radius: 5px;
+  box-shadow: 0 0 30px #000000;
   text-align: center;
-  margin-top: 120px;
+}
+
+.register-h2 {
+  margin: 0;
+  color: white;
+  font-size: 32px;
 }
 
 .register-form {
@@ -13,22 +27,57 @@
   align-items: center;
 }
 
-.register-buttons {
-  margin-top: 2em;
+.register-label {
+  margin-bottom: 0.2em;
+  font-size: 17px;
+  font-weight: 550;
 }
 
-.register-button, .back-button {
-  margin: 0 1em 0 0;
-  width: 80px;
-  color: black;
-  background-color: white;
-  border: 1.5px solid black;
-  border-radius: 20px;
+.register-input {
+  width: 217px;
+  height: 25px;
+  border: 0.5px solid rgb(204, 204, 204);
+  margin-bottom: 0.8em;
+}
+
+.register-buttons {
+  width: 319.6px;
+  height: 70px;
+  margin-top: 1em;
+  background-color: #392061;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.register-button {
+  width: 100%;
+  color: white;
+  background-color: transparent;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border: none;
+  font-size: 16px;
   cursor: pointer;
   transition: ease 0.4s;
 }
 
-.register-button:hover, .back-button:hover {
-  color:white;
+.register-button:hover {
   background-color: black;
+  font-size: 17.5px;
+}
+
+.div-checkbox {
+  margin-top: 1em;
+}
+
+#show-icon, #hide-icon {
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.show-span {
+  margin-left: 0.5em;
+  font-size: 14px;
 }
