--- a/src/Components/GeneralCheckList/GeneralCheckList.css
+++ b/src/Components/GeneralCheckList/GeneralCheckList.css
@@ -49,3 +49,10 @@
   color: rgb(163, 70, 163);;
   background-color: white;
 }
+
+@media only screen and (min-width: 950px) {
+  .list-render-div {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+}
