--- a/src/Components/ItemQuantity/ItemQuantity.css
+++ b/src/Components/ItemQuantity/ItemQuantity.css
@@ -1,3 +1,7 @@
+.quantity-div {
+  flex-basis: 30%;
+}
+
 .quantity-form {
   display: inline-block;
 }
@@ -26,4 +30,10 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+@media only screen and (min-width: 500px) {
+  .quantity-div {
+    flex-basis: 20%;
+  }
 }
