--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -27,3 +27,21 @@
   cursor: pointer;
   padding-top: 0.1em;
 }
+
+@media only screen and (min-width: 750px) {
+  .search-input {
+    width: 230px;
+  }
+  .search-button {
+    width: 70px;
+  }
+}
+
+@media only screen and (min-width: 1250px) {
+  .search-input {
+    width: 280px;
+  }
+  .search-button {
+    width: 80px;
+  }
+}
