--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -18,14 +18,13 @@
 }
 
 .search-button {
-  height: 100%;
+  height: 30.5px;
   border-top-right-radius: 100px;
   border-bottom-right-radius: 100px;
-  border: 1px solid rgb(34, 189, 34);
-  background-color: rgb(34, 189, 34);
+  border: 1px solid #a346a3;
+  background-color: #a346a3;
   color: white;
   cursor: pointer;
-  padding-top: 0.1em;
 }
 
 @media only screen and (min-width: 750px) {
