--- a/src/Components/Items/Items.css
+++ b/src/Components/Items/Items.css
@@ -5,6 +5,13 @@
   flex-direction: column;
 }
 
+.items-div-individual {
+  max-height: 450px;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+}
+
 /* STYLING FOR CHECKBOX INPUT */
 .item-div {
   position: relative;
@@ -66,6 +73,14 @@
   color: rgb(43, 184, 36);
   font-size: 20px;
   margin: auto 0 0.3em 0;
+  cursor: pointer;
+  align-self: center;
+}
+
+.add-item-button-individual {
+  color: rgb(43, 184, 36);
+  font-size: 20px;
+  margin: 0.3em 0 0.3em 0;
   cursor: pointer;
   align-self: center;
 }
