working on styling for landing page

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,8 +6,10 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  position: fixed;
+  position: absolute;
   bottom: 0;
+  left:0;
+  right:0;
   width: 100%;
 }
 
